--- a/src/app/admin/admin-options/admin-options.component.html
+++ b/src/app/admin/admin-options/admin-options.component.html
@@ -2,6 +2,10 @@
 <mat-tab-group>
         <mat-tab label="products"><app-setproduct></app-setproduct></mat-tab>
         <mat-tab label="users"> <app-admin-users></app-admin-users></mat-tab>
+        <mat-tab label="messages"> <app-admin-messages></app-admin-messages> </mat-tab>
         <mat-tab label="carts"> <app-admin-carts></app-admin-carts> </mat-tab>
         <mat-tab label="orders"> <app-admin-orders></app-admin-orders> </mat-tab>
+        
+        
 </mat-tab-group>
+<app-footer></app-footer>
