--- a/src/app/admin/admin-orders/admin-orders.component.html
+++ b/src/app/admin/admin-orders/admin-orders.component.html
@@ -1,1 +1,81 @@
-<p>admin-orders works!</p>
+<mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+</mat-form-field>
+        <div class="example-container mat-elevation-z8">
+            <mat-table [dataSource]="dataSource" matSort>
+                <ng-container matColumnDef="id">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
+                    <mat-cell *matCellDef="let row"> {{row.id}} <p *ngIf="!row.done"><mat-icon>fiber_new</mat-icon></p></mat-cell>
+                    <!-- <p *ngIf="!row.done"><mat-icon>fiber_new</mat-icon></p> -->
+                </ng-container>
+               
+                <ng-container matColumnDef="date">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
+                    <mat-cell *matCellDef="let row"> {{row.date}} </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="address">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Address</mat-header-cell>
+                        <mat-cell *matCellDef="let row"> {{row.address.address}}, {{row.address.city}} </mat-cell>
+                    </ng-container>
+                <ng-container matColumnDef="customer">
+                            <mat-header-cell *matHeaderCellDef mat-sort-header>Customer</mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.user.name}}</mat-cell>
+                </ng-container>
+                
+                <ng-container matColumnDef="total">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Total</mat-header-cell>
+                        <mat-cell *matCellDef="let row"> {{row.total}} </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="method">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Total</mat-header-cell>
+                        <mat-cell *matCellDef="let row"> {{row.paymentMethod}} </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="action">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Action</mat-header-cell>
+                        <mat-cell *matCellDef="let row"> <button mat-raised-button color="accent" (click)="displayDetails(row);detailsDisplayed=!detailsDisplayed;">Details</button> </mat-cell>
+                </ng-container>
+           
+        
+      
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+
+      </mat-table>
+        <!-- <mat-paginator #paginator [length]="dataSource.filteredData.length" [pageIndex]="0" [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator> -->
+  </div>
+  <div *ngIf="!detailsDisplayed else showOrderDetails">Click on 'Details' to display order's details.</div>
+  <ng-template #showOrderDetails>
+      <!-- detalji -->
+        <div class="wrapper-detail" style="margin-bottom: 30px;">
+            <b><mat-icon mat-list-icon (click)="detailsDisplayed=!detailsDisplayed">close</mat-icon></b>
+            <div class="center-text">
+                <div class="title">ID: {{selectedOrder.id}}</div>
+                <div class="title">Date: {{selectedOrder.date}}</div>
+                <hr>
+                <div class="title">Customer name: {{selectedOrder.user.name}}</div>
+                <div class="title">Email: {{selectedOrder.user.email}}</div>
+            <div class="other-info">
+                <hr>
+                Address, City: {{selectedOrder.address.address}}, {{selectedOrder.address.city}}<br>
+                Contact: <i>{{selectedOrder.address.contact}}</i> <br>
+                Payment method: {{selectedOrder.paymentMethod}}<br>
+                <hr>
+                <b>Items: </b>
+                <div *ngFor="let i of items">
+                    Product: {{i.product.name}} (Product ID: {{i.product.id}})<br>
+                    Quantity: {{i.quantity}}<br>
+                    Total for item: {{i.total}}
+                    <hr>
+                </div>
+                <b>Total: {{selectedOrder.total}}</b><br>
+            </div>   
+            <span class="med-spacer"></span>
+            <button *ngIf="!selectedOrder.done" mat-raised-button color="primary" (click)="finishOrder(selectedOrder)">Finish order</button>
+            <div *ngIf="selectedOrder.done" class="finished-order">
+              This order has already been finished.
+            </div>
+            
+            </div>
+        </div>   
+    </ng-template>
+
