--- a/src/app/admin/setproduct/setproduct.component.html
+++ b/src/app/admin/setproduct/setproduct.component.html
@@ -1,3 +1,4 @@
+
 <mat-card>
     <mat-card-content>
         <div *ngIf="(field =='searchMode') else (field=='addMode')? showAddMode: ((field=='editMode')? showEditMode : showResMode)">
@@ -23,7 +24,7 @@
                                 <input matInput type="text" 
                                 placeholder="Name of product" 
                                 id="name" name="name" 
-                                #name="ngModel" ngModel minlength="3" maxlength="20">
+                                #name="ngModel" ngModel minlength="2" maxlength="15">
             
                         </mat-form-field>
                 </form>
@@ -35,11 +36,11 @@
 </mat-card>
 
 <ng-template #showAddMode>
-    <form #addDataForm="ngForm" (ngSubmit)="setData(addDataForm.value);" novalidate>
+    <form #addDataForm="ngForm" (ngSubmit)="setData(addDataForm)" novalidate>
         <mat-error *ngIf="savedChanges">
             Data is saved.
             <label class="small-spacer"></label>
-            <mat-icon (click)="this.addDataForm.reset();savedChanges=false;toggle('searchMode');">clear</mat-icon>
+            <mat-icon (click)="this.addDataForm.reset();savedChanges=false;displayMode('searchMode');">clear</mat-icon>
         </mat-error>
         <div *ngIf="!savedChanges">
             <mat-progress-bar mode="indeterminate" *ngIf="dataLoading"></mat-progress-bar>
@@ -49,38 +50,64 @@
                 <button type="reset" (click)="this.addDataForm.reset();" mat-raised-button [disabled]="!addDataForm.valid" color="primary">Clear</button>
                 <span class="med-spacer"></span>
                 <span matTooltip="Search">
-                    <mat-icon color="primary" (click)="toggle('searchMode')">search</mat-icon>
+                    <mat-icon color="primary" (click)="displayMode('searchMode')">search</mat-icon>
                 </span>
                 <span class="small-spacer"></span>
                 <span matTooltip="Show Recent Results">
-                    <mat-icon color="primary" (click)="toggle('resMode');getData();">cached</mat-icon>
+                    <mat-icon color="primary" (click)="displayMode('resMode');getData();">cached</mat-icon>
                 </span>
             </mat-card-actions>
-            <mat-form-field>
+            <!-- <mat-form-field>
                 <input matInput placeholder="Category" name="category" id="category" ngModel required minlength="1">
                 <mat-hint align="end">eg. Men Garments</mat-hint>
+            </mat-form-field> -->
+            <!-- <mat-form-field>
+            <mat-label>Select category</mat-label>
+            <mat-select [(value)]="selectedCategory">
+                <mat-option *ngFor="let cat of categoryOptions" value="">
+                    {{cat.viewValue}}
+                </mat-option>
+            </mat-select>
+            </mat-form-field> -->
+            <mat-form-field>
+            <mat-label>Select category</mat-label>
+            <mat-select [(value)]="selectedCategory">
+                <mat-option *ngFor="let cat of categoryOptions" [value]="cat.value">
+                    {{cat.viewValue}}
+                </mat-option>
+            </mat-select>
+            <!-- Izabrana: {{selectedCategory.name}} -->
             </mat-form-field>
-            <br>
+            <!-- <select [(ngModel)]="selectedLevel">
+                    <option *ngFor="let level of levels" [ngValue]="level">{{level.name}}</option>
+            </select> -->
+            <!-- <mat-select>
+                <mat-option *ngFor="let cat of categoryOptions" [value]="cat.value" >
+                {{cat.viewValue}}
+                </mat-option>
+            </mat-select>
+            </mat-form-field> -->
+            <!--  <br>
             <mat-form-field>
                 <textarea matInput placeholder="*IMP*: Search use Tags Text" name="tags" id="tags" ngModel required minlength="1"></textarea>
                 <mat-hint align="end">eg. Men,Reading,Glasses</mat-hint>
-            </mat-form-field>
+            </mat-form-field> -->
             <br>
             <mat-form-field>
-                <input matInput placeholder="Product Name" name="name" id="name" ngModel required minlength="1">
+                <input matInput placeholder="Product Name" name="name" id="name" #name="ngModel" ngModel required minlength="1">
                 <mat-hint align="end">eg. Shirt</mat-hint>
             </mat-form-field>
 
             <br>
             <mat-form-field>
-                <textarea matInput placeholder="Description" name="descr" id="descr" ngModel></textarea>
+                <textarea matInput placeholder="Description" name="descr" id="descr" #descr="ngModel" ngModel></textarea>
             </mat-form-field>
             <br>
             <mat-form-field>
-                <input matInput placeholder="Units in stock" name="unitsInStock" id="unitsInStock" ngModel required pattern="[0-9]+">
+                <input matInput placeholder="Units in stock" name="unitsInStock" id="unitsInStock" #unitsInStock="ngModel" ngModel required pattern="[0-9]+">
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Price" name="price" id="price" ngModel required pattern="[0-9]+">
+                <input matInput placeholder="Price" name="price" id="price" #price="ngModel" ngModel required pattern="[0-9]+">
             </mat-form-field>
             
         </div>
@@ -94,58 +121,63 @@
                 <span matTooltip="Show results">
                 <mat-icon color="primary" (click)="displayMode('resMode');getData();">cached</mat-icon>
             </span>
-    <form #editDataForm="ngForm" (ngSubmit)="updateData(editDataForm.value);" novalidate>
-        <input type="hidden" name="_id" id="_id" [ngModel]="myDocData._id" required>
+    <form #editDataForm="ngForm" (ngSubmit)="updateData(editDataForm);" novalidate>
+        <input type="hidden" name="_id" id="_id" [ngModel]="loadedProduct.id" required>
         <mat-error *ngIf="savedChanges">
-            Data is saved.
+            Product has been updated.
             <label class="small-spacer"></label>
-            <mat-icon (click)="this.editDataForm.reset();savedChanges=false;toggle('searchMode');">clear</mat-icon>
+            <mat-icon (click)="this.editDataForm.reset();savedChanges=false;displayMode('searchMode');">clear</mat-icon>
         </mat-error>
         <div *ngIf="!savedChanges">
             <mat-progress-bar mode="indeterminate" *ngIf="dataLoading"></mat-progress-bar>
             <mat-error *ngIf="error">Error: {{ errorMessage }}</mat-error>
             <mat-card-actions align="start">
-                <button type="submit" mat-raised-button [disabled]="!this.editDataForm.valid || this.editDataForm.pristine" color="primary">Update</button>
+                <button type="submit" mat-raised-button [disabled]="!this.editDataForm.valid" color="primary">Update</button>
                 <span class="med-spacer"></span>
                 <span matTooltip="Search">
-                    <mat-icon color="primary" (click)="toggle('searchMode')">search</mat-icon>
+                    <mat-icon color="primary" (click)="displayMode('searchMode')">search</mat-icon>
                 </span>
                 <span class="small-spacer"></span>
                 <span matTooltip="Shwo Recent Results">
-                    <mat-icon color="primary" (click)="toggle('resMode');getData();">cached</mat-icon>
+                    <mat-icon color="primary" (click)="displayMode('resMode');getData();">cached</mat-icon>
                 </span>
             </mat-card-actions>
-            <mat-form-field>
-                <input matInput placeholder="Category" name="category" id="category" [ngModel]="myDocData.category" required minlength="1">
+            <!-- <mat-form-field>
+                <input matInput placeholder="Category" name="category" id="category" [ngModel]="loadedProduct.category" required minlength="1">
                 <mat-hint align="end">eg. Men Garments</mat-hint>
+            </mat-form-field> -->
+            <mat-form-field>
+                    <mat-label>Select category</mat-label>
+                    <mat-select [(value)]="selectedCategory">
+                        <mat-option *ngFor="let cat of categoryOptions" [value]="cat.value">
+                            {{cat.viewValue}}
+                        </mat-option>
+                    </mat-select>
+                    <!-- Izabrana: {{selectedCategory.name}} -->
             </mat-form-field>
-            
             <br>
             <mat-form-field>
-                <textarea matInput placeholder="*IMP*: Search use Tags Text" name="tags" id="tags" [ngModel]="myDocData.tags" required minlength="1"></textarea>
-                <mat-hint align="end">eg. Men,Reading,Glasses</mat-hint>
-            </mat-form-field>
-            <br>
-            <mat-form-field>
-                <input matInput placeholder="Product Name" name="name" id="name" [ngModel]="myDocData.name" required minlength="1">
+                <input matInput placeholder="Product Name" name="name" id="name" [ngModel]="loadedProduct.name" required minlength="1">
                 <mat-hint align="end">eg. Shirt</mat-hint>
             </mat-form-field>
            
             <br>
             <mat-form-field>
-                <textarea matInput placeholder="Description" name="descr" id="descr" [ngModel]="myDocData.descr"></textarea>
+                <textarea matInput placeholder="Description" name="description" id="description" [ngModel]="loadedProduct.description"></textarea>
             </mat-form-field>
             <br>
             <mat-form-field>
-                <input matInput placeholder="Units in stock" name="unitsInStock" id="unitsInStock" [ngModel]="myDocData.unitsInStock" required pattern="[0-9]+">
+                <input matInput placeholder="Units in stock" name="unitsInStock" id="unitsInStock" [ngModel]="loadedProduct.unitsInStock" required pattern="[0-9]+">
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Price" name="price" id="price" [ngModel]="myDocData.price" required pattern="[0-9]+">
+                <input matInput placeholder="Price" name="price" id="price" [ngModel]="loadedProduct.price" required pattern="[0-9]+">
             </mat-form-field>
             
         </div>
     </form>
 </ng-template>
+
+
 <ng-template #showResMode>
         <span matTooltip="Add new">
                 <mat-icon color="primary" (click)="displayMode('addMode');">add</mat-icon>
@@ -154,6 +186,22 @@
                 <span matTooltip="Show results">
                 <mat-icon color="primary" (click)="displayMode('resMode');getData();">cached</mat-icon>
             </span>
+            <hr>
+            <div class="category-create">
+                Create new category: 
+                <form #catForm = "ngForm" (ngSubmit)="saveCategory(catForm)">
+                    Name: <input matInput name="cat_name" #cat_name="ngModel" placeholder="Enter category name here" ngModel required>
+                    <button type="submit" mat-raised-button color="primary">Save category</button>
+                </form>
+
+            </div>
+            <div *ngIf="categorySaved">
+                    <p class="description-text">Category saved.</p>
+                </div>
+                <mat-error *ngIf="error">
+                    Error! {{errorMessage}}
+                </mat-error>
+            <hr>
     <div class="example-header">
         <mat-form-field>
             <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
@@ -165,7 +213,7 @@
         <mat-table [dataSource]="dataSource" matSort>
             <ng-container matColumnDef="category">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>Category</mat-header-cell>
-                <mat-cell *matCellDef="let row"> {{row.category}} </mat-cell>
+                <mat-cell *matCellDef="let row"> {{row.category.name}} </mat-cell>
             </ng-container>
            
             <ng-container matColumnDef="name">
@@ -174,7 +222,7 @@
             </ng-container>
             <ng-container matColumnDef="price">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Price</mat-header-cell>
-                    <mat-cell *matCellDef="let row"> {{row.price}} </mat-cell>
+                    <mat-cell *matCellDef="let row"> {{row.price}} RSD. </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="unitsInStock">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Units in stock</mat-header-cell>
@@ -192,15 +240,23 @@
                         <button mat-icon-button matTooltip="Take Picture" (click)="this.myDocId=row._id;this.takeHostSelfie=true;" class="label-error"
                             *ngIf="!row.path" class="label-error"><mat-icon>camera_roll</mat-icon></button>
                     <span matTooltip="Edit">
-                        <button mat-icon-button (click)="getDoc(row._id)">
+                        <button mat-icon-button (click)="getDoc(row.id);">
+                            
                             <mat-icon color="primary">edit</mat-icon>
                         </button>
                     </span>
-                    <span matTooltip="Delete">
-                        <button mat-icon-button (click)="deleteDoc(row._id)">
-                            <mat-icon color="primary">delete</mat-icon>
+                    
+                    <span matTooltip="Active/Deactive product">
+                        <button mat-icon-button *ngIf="row.active" (click)="changeStatusProduct(row, row.id)">
+                            <mat-icon class="red-icon">delete</mat-icon>
+                        </button>
+                        <button mat-icon-button *ngIf="!row.active" (click)="changeStatusProduct(row, row.id)">
+                            <mat-icon class="green-icon">shop</mat-icon>
                         </button>
                     </span>
+                    <p *ngIf="row.active">(Currently: actived)</p>
+                    <p *ngIf="!row.active">(Currently: not actived)</p>
+                
                 </mat-cell>
             </ng-container>
 
