--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -1,18 +1,20 @@
+<app-header pageTitle="Login" helpTitle="Enter your credentials in appropriate input fields."></app-header>
 <mat-card>
-    <mat-card-header>
+    <!-- <mat-card-header>
       <mat-card-title>
-        <mat-icon>dashboard</mat-icon>Elish Consulting</mat-card-title>
-      <mat-card-subtitle>eCommerce App</mat-card-subtitle>
-    </mat-card-header>
-    <div *ngIf="afAuth.user | async as user; else showShopping">
-      <button type="button" routerLink="/shopping" mat-raised-button color="primary">Vi ste ulogovani. Continue Shopping</button>
+        <mat-icon>dashboard</mat-icon>E-shop</mat-card-title>
+      <mat-card-subtitle>Please enter valid credentials.</mat-card-subtitle>
+    </mat-card-header> -->
+    
+    <div *ngIf="userLoggedIn; else showShopping">
+        You have already logged in. <button type="button" routerLink="/products" mat-raised-button color="primary"><p style="color: white;"><i> Continue to products</i></p></button>
     </div>
     <ng-template #showShopping>
       <mat-card-content>
         <mat-divider></mat-divider>
-        <form #formData="ngForm" (ngSubmit)="login('email',formData.value)" class="example-form">
+        <form #formData="ngForm" (ngSubmit)="login(formData)" class="example-form">
           <mat-card-actions *ngIf="errorMessage">
-            <mat-error>Login credentials are not verified. Here is the error: {{ error }}</mat-error>
+            <mat-error>Login credentials are not verified.</mat-error>
           </mat-card-actions>
           <mat-error *ngIf="dataLoading">
             <mat-progress-spinner mode="indeterminate" [attr.color]="primary" [value]="15"></mat-progress-spinner>
@@ -24,7 +26,8 @@
           </mat-card-actions>
           <mat-form-field class="example-full-width">
             <input matInput placeholder="email" name="email" #email="ngModel" ngModel required email>
-          </mat-form-field>
+          </mat-form-field><br>
+
           <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">Please enter a valid email.</mat-error>
           <mat-form-field class="example-full-width">
             <input matInput type="password" placeholder="app password" name="password" #password="ngModel" ngModel required minlength="5"
@@ -36,13 +39,6 @@
             <mat-error *ngIf="password.errors['maxlength']">Password can't be more than 30 characters.</mat-error>
           </span>
         </form>
-      </mat-card-content>
-      <mat-card-content *ngIf="socialAuth">
-        <mat-chip-list class="mat-chip-list-stacked" style="margin-left: 170px;">
-          <mat-chip color="warn" selected="true" (click)="login('google')">
-            Login With Google
-          </mat-chip>
-        </mat-chip-list>
       </mat-card-content>
       <mat-card-actions>
         <mat-divider></mat-divider>
