--- a/src/app/shared/register/register.component.html
+++ b/src/app/shared/register/register.component.html
@@ -1,1 +1,42 @@
-<p>register works!</p>
+<app-header pageTitle="Sign Up"></app-header>
+<mat-card [@fallIn]='state' *ngIf="!savedChanges else showSavedChangesCard">
+  <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
+    <mat-card-content>
+      <mat-card-title>
+        <span class="small-headline">Create Account</span>
+        <span class="small-spacer"></span>
+        <a [routerLink]="['/login']" color="primary">
+          <mat-icon>backspace</mat-icon>
+        </a>
+      </mat-card-title>
+      <mat-card-actions align="start" [@fallIn]='state' *ngIf="error">
+        <mat-error>Try later or enter other credentials.</mat-error>
+      </mat-card-actions>
+      <div *ngIf="dataLoading">
+        <mat-progress-spinner mode="indeterminate" [attr.color]="primary" [value]="15"></mat-progress-spinner>
+      </div>
+      <div *ngIf="brokenNetwork" class="label-error">Network connection error.</div>
+      <mat-card-actions align="start">
+        <button type="submit" [disabled]="!formData.valid" mat-raised-button color="primary">Register me</button>
+      </mat-card-actions>
+      <mat-form-field class="example-full-width">
+            <input matInput placeholder="Enter your full name" name="name" #name="ngModel" ngModel required>
+      </mat-form-field><br>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Enter valid email" name="email" #email="ngModel" ngModel required email>
+      </mat-form-field><br>
+      <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">Please enter a valid email.</mat-error>
+      <mat-form-field class="example-full-width">
+        <input matInput type="password" placeholder="Enter your password" name="password" #password="ngModel" ngModel required minlength="8"
+          maxlength="20">
+      </mat-form-field><br>
+      <span *ngIf="password.invalid && (password.dirty || password.touched)">
+        <mat-error *ngIf="password.errors['required']">Password is Required.</mat-error>
+        <mat-error *ngIf="password.errors['minlength']">Password can't be less than 8 characters.</mat-error>
+        <mat-error *ngIf="password.errors['maxlength']">Password can't be more than 20 characters.</mat-error>
+      </span>
+    </mat-card-content>
+    
+  </form>
+</mat-card>
+<app-footer></app-footer>
