--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 body{
     margin:0;
+    background-color: whitesmoke;
 }
 .example-icon{
     padding: 0 4px;
@@ -9,3 +11,4 @@ body{
 .example-spacer {
     flex: 1 1 auto;
 }
+
